--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "prettier": {
     "tabWidth": 2,
+    "printWidth": 80,
     "singleQuote": true,
-    "semi": false
+    "semi": true
   }
 }
